Fix a lot of things which raised by mobile
