# app/Http/Resources/Chat.php
@@ -3,6 +3,7 @@
 namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\Resource;
+use App\Http\Resources\User as UserResource;
 
 class Chat extends Resource
 {
@@ -19,7 +20,9 @@ class Chat extends Resource
           'message' => $this->message,
           'read' => !!$this->read,
           'senderId' => $this->sender_id,
+          'sender' => new UserResource($this->sender),
           'receiverId' => $this->receiver_id,
+          'receiver' => new UserResource($this->receiver),
           'createdAt' => is_null($this->created_at) ? null : $this->created_at->toDateTimeString(),
           'updatedAt' => is_null($this->updated_at) ? null : $this->updated_at->toDateTimeString(),
         ];
