# storage/api-docs/api-docs.json
@@ -2080,6 +2080,14 @@
           "$ref": "#/definitions/UserPut"
         },
         {
+          "type": "object",
+          "properties": {
+            "calenderToken": {
+              "type": "string"
+            }
+          }
+        },
+        {
           "$ref": "#/definitions/Timestamps"
         }
       ]
@@ -2112,10 +2120,10 @@
         {
           "type": "object",
           "required": [
-            "invite_email"
+            "inviteEmail"
           ],
           "properties": {
-            "invite_email": {
+            "inviteEmail": {
               "type": "string"
             }
           }
@@ -2165,6 +2173,22 @@
           }
         },
         {
+          "type": "object",
+          "properties": {
+            "sender": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        },
+        {
+          "type": "object",
+          "properties": {
+            "receiver": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        },
+        {
           "$ref": "#/definitions/Timestamps"
         }
       ]
@@ -2177,10 +2201,10 @@
         "message"
       ],
       "properties": {
-        "sender_id": {
+        "senderId": {
           "type": "integer"
         },
-        "receiver_id": {
+        "receiverId": {
           "type": "integer"
         },
         "message": {
@@ -2201,7 +2225,8 @@
           "type": "object",
           "properties": {
             "status": {
-              "type": "boolean"
+              "type": "string",
+              "enum": ["done", "notask", "open"]
             }
           }
         },
@@ -2345,7 +2370,8 @@
               "type": "integer"
             },
             "status": {
-              "type": "boolean"
+              "type": "string",
+              "enum": ["done", "notask", "open"]
             }
           }
         },
@@ -2461,7 +2487,8 @@
               "type": "integer"
             },
             "status": {
-              "type": "boolean"
+              "type": "string",
+              "enum": ["done", "notask", "open"]
             }
           }
         },
